--- a/client/lib/components/roster/weekly/top/staff_cost/view.html
+++ b/client/lib/components/roster/weekly/top/staff_cost/view.html
@@ -1,4 +1,4 @@
 <template name="staffCostTr">
-  <td>$1000</td>
-  <td>$1100</td>
+  <td>${{formatCurrency state$forecast}}</td>
+  <td>${{formatCurrency state$actual}}</td>
 </template>
