--- a/client/lib/components/menuitems/master_list/list/view.html
+++ b/client/lib/components/menuitems/master_list/list/view.html
@@ -6,7 +6,7 @@
   </div>
   <hr>
   <div class="list-group">
-  {{#each state$getMenuItems}}
+  {{#each getMenuItems}}
     {{> render component='menuItem' menuitem=this}}
   {{/each}}
   </div>
