--- a/client/views/main_views/jobitems/list_view.html
+++ b/client/views/main_views/jobitems/list_view.html
@@ -8,7 +8,7 @@
         <div class="panel-options">
           <ul class="nav nav-tabs jobtypesPanel">
             {{#each jobTypes}}
-              <li class="">
+              <li class="" data-id="{{_id}}">
                 <a href="#{{_id}}" data-toggle="tab">{{name}}</a>
               </li>
             {{/each}}
