added percentage values

--- a/client/lib/components/roster/weekly/top/figure_box/view.html
+++ b/client/lib/components/roster/weekly/top/figure_box/view.html
@@ -14,7 +14,7 @@
           {{/if}}
           </h1>
         <div class="stat-percent font-bold {{state$percent.textColor}}">{{roundCount state$percent.value}}%
-          <i class="fa fa-angle-up"></i>
+          <i class="fa {{state$percent.icon}}"></i>
         </div>
         <small>{{state$item.subText}}: 
           {{#if state$currency}}
