--- a/client/lib/components/roster/weekly/top/staff_cost/view.html
+++ b/client/lib/components/roster/weekly/top/staff_cost/view.html
@@ -1,4 +1,4 @@
 <template name="staffCostTr">
   <td>${{formatCurrency state$forecast}}</td>
-  <td>${{formatCurrency state$actual}}</td>
+  <td class="{{state$class}}">${{formatCurrency state$actual}}</td>
 </template>
