--- a/client/lib/components/roster/weekly/top/staff_cost_percentages/view.html
+++ b/client/lib/components/roster/weekly/top/staff_cost_percentages/view.html
@@ -1,4 +1,4 @@
 <template name="staffCostPercentagesTr">
   <td>{{roundCount state$forecast}}%</td>
-  <td>{{roundCount state$actual}}%</td>
+  <td class="{{state$class}}">{{roundCount state$actual}}%</td>
 </template>
