--- a/client/lib/components/roster/weekly/week/view.html
+++ b/client/lib/components/roster/weekly/week/view.html
@@ -1,6 +1,10 @@
 <template name="weeklyShiftRoster">
   {{> render component="weeklyFigures" week=state$week}}
-  {{#each state$week}}
-    {{> render component="weeklyRosterDay" name=this origin=state$origin}}
-  {{/each}}
+  <div class="row">
+    <div class="col-lg-12">
+      {{#each state$week}}
+        {{> render component="weeklyRosterDay" name=this origin=state$origin}}
+      {{/each}}
+    </div>
+  </div>
 </template>
