fix supplier subscription and jobitem edit bug

--- a/client/lib/components/stock/items/edit/view.html
+++ b/client/lib/components/stock/items/edit/view.html
@@ -1,5 +1,5 @@
 <template name="ingredientItemEdit">
-  <tr>
+  <tr data-id="{{state$item._id}}">
     <td>{{state$item.code}}</td>
     <td>{{state$item.description}}</td>
     <td>{{state$item.portionUsed}}</td>
