fix publish roster bug

--- a/client/lib/components/week_selector/view.html
+++ b/client/lib/components/week_selector/view.html
@@ -9,7 +9,7 @@
         {{#each state$futureWeeks}}
           <div class="checklist-content">
             <label> 
-              <input type="radio" value="{{week}}" id="{{week}}" name="week"> Week {{week}}, starting {{monday}}
+              <input type="radio" value="{{week}}" id="{{week}}" name="week" data-year="{{year}}"> Week {{week}}, starting {{monday}}
             </label>
           </div>
         {{/each}}
