--- a/client/lib/components/menuitems/edit/view.html
+++ b/client/lib/components/menuitems/edit/view.html
@@ -18,16 +18,22 @@
     <div class="form-group">
       <label class="col-sm-2 control-label">Status</label>
       <div class="col-sm-10">
-        <a href="#" data-name="status" class="my-editable-link">{{state$menu.status}}</a>
-        <select name="status" class="form-control text-capitalize hide my-editable-select" data-id="{{state$menu._id}}">
-          {{#each state$statusList}}
-            {{# if equal this.name state$menu.status}}
-              <option value="{{state$menu.status}}" selected="selected" >{{state$menu.status}}</option>
-            {{else}}
-              <option value="{{this.name}}">{{this.name}}</option>
-            {{/ if}}
-          {{/each}}
-        </select>
+        {{#if state$isArchived}}
+            <span style="position: relative; top: 8px;">
+                archived
+            </span>
+        {{else}}
+            <a href="#" data-name="status" class="my-editable-link">{{state$menu.status}}</a>
+            <select name="status" class="form-control text-capitalize hide my-editable-select" data-id="{{state$menu._id}}">
+                {{#each state$statusList}}
+                    {{# if equal this.name state$menu.status}}
+                        <option value="{{state$menu.status}}" selected="selected" >{{state$menu.status}}</option>
+                    {{else}}
+                        <option value="{{this.name}}">{{this.name}}</option>
+                    {{/ if}}
+                {{/each}}
+            </select>
+        {{/if}}
       </div>
     </div>
     <div class="form-group">
