--- a/client/lib/components/stock/edit/view.html
+++ b/client/lib/components/stock/edit/view.html
@@ -118,7 +118,7 @@
                         Portions
                       </th>
                       <th>
-                        Self Life
+                        Shelf Life
                       </th>
                     </tr>
                   </thead>
