--- a/client/lib/components/stocktake/order_receive/list/view.html
+++ b/client/lib/components/stocktake/order_receive/list/view.html
@@ -45,7 +45,7 @@
               <br><br>
               {{#if state$receipt.invoiceImage}}
                 <a class="btn btn-primary" href="{{state$receipt.invoiceImage}}" id="viewReceipt">View Invoice</a>
-                <a class="btn btn-default uploadInvoice">Edit Invoice</a>
+                <a class="btn btn-default uploadInvoice">Add more Invoices</a>
               {{else}}
                 <a class="btn btn-primary uploadInvoice">Take a photo/ Upload Invoice</a>
               {{/if}}
