fix add job button job selection

--- a/client/lib/components/roster/daily/view.html
+++ b/client/lib/components/roster/daily/view.html
@@ -21,4 +21,10 @@
       </div>
     </div>
   </div>
+
+  <!-- SUBMIT JOB -->
+  <div class="modal fade" id="submitJobModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    {{> render component='submitJob'}}
+  </div>
+  <!-- /SUBMIT JOB -->
 </template>
