--- a/client/lib/components/roster/jobs/submit/view.html
+++ b/client/lib/components/roster/jobs/submit/view.html
@@ -13,6 +13,7 @@
               <div class="col-sm-6">
                 <div class="dropdown">
                   <select name="type" class="form-control m-b jobType">
+                    <option value="{{state$selectedJobType._id}}">{{state$selectedJobType.name}}</option>
                     {{#each state$jobTypes}}
                     <option value="{{this._id}}">{{this.name}}</option>
                     {{/each}}
@@ -35,7 +36,7 @@
             <div class="form-group">
               <label class="col-sm-4 control-label">Portions</label>
               <div class="col-sm-6">
-                <input type="number" name="portions" class="form-control portions" placeholder="No. of Portions" value="{{state$portions}}">
+                <input type="number" name="portions" class="form-control portions" placeholder="No. of Portions" value="{{state$job.portions}}">
               </div>
             </div>
             <div class="form-group">
