adding select2 panel for jobs-not fixed

--- a/client/lib/components/roster/jobs/submit/view.html
+++ b/client/lib/components/roster/jobs/submit/view.html
@@ -23,14 +23,8 @@
             <div class="form-group">
               <label class="col-sm-4 control-label">Job</label>
               <div class="col-sm-6">
-                <div class="dropdown">
-                  <select name="job" class="form-control m-b jobName">
-                    <option selected="selected" value="">Select Job</option>
-                    {{#each state$jobs}}
-                    <option value="{{_id}}">{{name}}</option>
-                    {{/each}}
-                  </select>
-                </div>
+                <a href="#" id="country"></a>
+                 <a href="#" id="username4"></a>
               </div>
             </div>
             {{#if state$isPrep}}
