--- a/client/lib/components/navigations/navigation/view.html
+++ b/client/lib/components/navigations/navigation/view.html
@@ -44,6 +44,20 @@
             <a href="/"><i class="fa fa-th-large"></i> <span class="nav-label">Dashboard</span></a>
           </li>
 
+          <!-- Show "Create Organization" or "Organization" item in navigation -->
+          {{#if state$isAdmin}}
+            {{#if state$hasCompany}}
+              <li class="{{isActiveRoute regex='organizationSettings'}}">
+                <a href="/organization"><i class="fa fa-sitemap"></i> <span class="nav-label">Organization</span></a>
+              </li>
+            {{else}}
+                <li class="{{isActiveRoute regex='createOrganization'}}">
+                  <a href="/create-organization">
+                    <i class="fa fa-plus"></i> <span class="nav-label">Create Organization</span></a>
+                </li>
+            {{/if}}
+          {{/if}}
+
           <li class="{{isActiveRoute regex='weeklyRoster|dailyRoster|templateWeeklyRoster'}}">
             <a href="#">
               <i class="fa fa-calendar-o"></i>
