--- a/client/lib/components/jobs/items/item_listed/view.html
+++ b/client/lib/components/jobs/items/item_listed/view.html
@@ -4,7 +4,7 @@
     <td>{{jobTypeById state$type}}</td>
     <td>{{state$status}}</td>
     <td>{{state$activeTime}}</td>
-    <td>{{state$createdOn}}</td>
+    <td>{{dateFormat state$createdOn}}</td>
     <td>{{state$portions}}</td>
     <td><a href="#" class="deleteJob" data-id="{{state$id}}">Delete</a></td>
   </tr>
