--- a/client/lib/components/organizations/organization_details/view.html
+++ b/client/lib/components/organizations/organization_details/view.html
@@ -1,4 +1,6 @@
 <template name="organizationDetailsPage">
+  {{> render component="generalFlyout" title="Change billing account" renderComponent="changeBillingAccount"}}
+
   <div class="wrapper wrapper-content animated fadeInRight ecommerce">
     <div class="row">
       <div class="col-lg-12">
@@ -10,10 +12,17 @@
       <div class="col-md-12" style="display: block;">
         <ul class="list-group" style="display: block;">
           <li class="list-group-item">
-            <span class="badge"><i class="fa fa-fw fa-angle-right"></i></span>Add/edit billing account
+            <span class="badge open-flyout" data-id="changeBillingAccount">
+              <i class="fa fa-fw fa-angle-right"></i>
+            </span>
+            Add/edit billing account
           </li>
           <li class="list-group-item" style="display: block;">Locations
-            <span class="badge"><i class="fa fa-fw fa-angle-right"></i></span>
+            <span class="badge">
+              <a href="{{pathFor route='locationsList'}}">
+                <i class="fa fa-fw fa-angle-right"></i>
+              </a>
+            </span>
           </li>
         </ul>
       </div>
