--- a/client/lib/components/roster/sales_prediction/header_controls/view.html
+++ b/client/lib/components/roster/sales_prediction/header_controls/view.html
@@ -1,3 +1,3 @@
 <template name="salesPredictionHeader">
-  <button class="btn btn-white datepicker dropdown-toggle calendar-toggle">{{state$currentDate}}</button>
+  {{> render component="weekPicker"}}
 </template>
