--- a/client/lib/components/roster/jobs/submit/view.html
+++ b/client/lib/components/roster/jobs/submit/view.html
@@ -23,9 +23,13 @@
             </div>
             <div class="form-group">
               <label class="col-sm-4 control-label">Job</label>
-              <div class="col-sm-6">
-                <a href="#" id="country"></a>
-                <a href="#" id="username4"></a>
+              <div class="form-group">
+                <div class="input-group">
+                  <select data-placeholder="Choose a Country..." class="chosen-select" style="width:350px;" tabindex="2">
+                    <option value="">Select</option>
+                    <option value="United States">United States</option>                  
+                  </select>
+                </div>
               </div>
             </div>
             {{#if state$isPrep}}
