--- a/client/stylesheets/12_index.css
+++ b/client/stylesheets/12_index.css
@@ -114,3 +114,7 @@ li > img {
 .areaBox > a {
   white-space: inherit !important;
 }
+
+.chosen-select-width, .chosen-single, .chosen-drop {
+  min-width: 200px;
+}
