--- a/client/lib/components/roster/jobs/submit/view.html
+++ b/client/lib/components/roster/jobs/submit/view.html
@@ -7,6 +7,7 @@
         </div>
         <form class="form-horizontal" role="form" id="newJob">
           <div class="modal-body">
+
             <div class="form-group">
               <label class="col-sm-4 control-label">Type</label>
               <div class="col-sm-6">
@@ -21,13 +22,11 @@
             </div>
             <div class="form-group">
               <label class="col-sm-4 control-label">Job</label>
-              <div class="col-sm-6">
-                <div class="dropdown">
-                  <select name="job" class="form-control m-b jobName">
-                    <option selected="selected" value="">Select Job</option>
-                    {{#each state$jobs}}
-                    <option value="{{_id}}">{{name}}</option>
-                    {{/each}}
+              <div class="form-group">
+                <div class="input-group">
+                  <select data-placeholder="Choose a Country..." class="chosen-select" style="width:350px;" tabindex="2">
+                    <option value="">Select</option>
+                    <option value="United States">United States</option>
                   </select>
                 </div>
               </div>
