--- a/client/lib/components/stock_areas/item/view.html
+++ b/client/lib/components/stock_areas/item/view.html
@@ -2,11 +2,13 @@
   <li class="dd-item" data-id="{{state$area._id}}">
     <div class="dd-handle">{{state$area.name}}</div>
     <ol class="dd-list">
+      {{#if state$area.active}}
       <li class="dd-item" data-id="{{state$area._id}}">
         <div class="dd-handle">
           <input name="sarea" class="form-control sarea" placeholder="Type special section name here and press enter..."/>
         </div>
       </li>
+      {{/if}}
       {{#each state$specialAreas}}
       <li class="dd-item" data-id="{{_id}}">
         <div class="dd-handle">{{name}}</div>
