--- a/client/lib/components/stocktake/counting/areas/area_filters/view.html
+++ b/client/lib/components/stocktake/counting/areas/area_filters/view.html
@@ -1,5 +1,5 @@
 <template name="areaFilters">
-  <div class="col-md-4 no-margin">
+  <div class="col-md-4 no-margin areaFilering">
     {{#each state$generalAreas}}
       {{> render component="areaBox" item=this class="garea-filter" name="garea"}}
       <div class="collapse" id="{{this._id}}">
