--- a/client/lib/components/users/profile/profile/view.html
+++ b/client/lib/components/users/profile/profile/view.html
@@ -1,5 +1,5 @@
 <template name="profile">
-  <div class="col-md-4">
+  <div class="col-md-12 col-lg-4">
     <div class="ibox float-e-margins">
       <div class="ibox-title">
         <h5>Profile Detail</h5>
