--- a/client/stylesheets/12_index.less
+++ b/client/stylesheets/12_index.less
@@ -1,3 +1,9 @@
+.flyout-container {
+  .editable {
+    padding: 0px;
+  }
+}
+
 .profile-image {
     width: 48px;
     height: 48px;
@@ -36,7 +42,7 @@
         }
         .message-avatar {
             float: left !important;
-            margin-right: !important;
+            margin-right: 0px !important;
         }
     }
 }
