--- a/client/lib/components/roster/sales_prediction/header_controls/view.html
+++ b/client/lib/components/roster/sales_prediction/header_controls/view.html
@@ -1,3 +1,3 @@
 <template name="salesPredictionHeader">
-  {{> render component="weekPicker"}}
+  {{> render component="weekPicker" year=state$year week=state$week onDateChanged=state$onDateChanged}}
 </template>
