--- a/client/lib/components/week_picker/view.html
+++ b/client/lib/components/week_picker/view.html
@@ -5,7 +5,7 @@
     <button type="button"
             style="padding: 6px"
             class="btn btn-white datepicker">
-      {{state$currentDate}}
+      {{state$currentWeekStr}}
       <span class="caret"></span>
     </button>
 
