--- a/client/lib/components/roster/sales_prediction/view.html
+++ b/client/lib/components/roster/sales_prediction/view.html
@@ -3,21 +3,41 @@
     <div class="prediction-panel">
       <div class="sales-per-menu-item-section">
         <table class="table table-striped table-condensed white-bg">
-          <thead>
+          <thead data-pg-collapsed>
           <tr>
-            <th>Menu item</th>
-            <th>Predicted sell count</th>
+            <th></th>
+            {{#each state$week}}
+              <th colspan="2">
+                {{this.day}}
+                <h5>{{this.date}}</h5>
+              </th>
+            {{/each}}
+          </tr>
+          </thead>
+          <thead data-pg-collapsed>
+          <tr>
+            <th></th>
+            {{#each state$week}}
+              <th>Forecast</th>
+              <th>Actual</th>
+            {{/each}}
           </tr>
           </thead>
           <tbody>
-          {{#each salesPerMenuItem}}
+          <tr>
+            <td>Sales</td>
+            {{#each state$week}}
+              <td>${{state$random 3}}</td>
+              <td>${{state$random 3}}</td>
+            {{/each}}
+          </tr>
+          {{#each state$menuItems}}
             <tr>
-              <td>
-                {{name}}
-              </td>
-              <td>
-                {{predictedSellCount}}
-              </td>
+              <td>{{this}}</td>
+              {{#each state$week}}
+                <td>{{state$random 2}}</td>
+                <td>{{state$random 2}}</td>
+              {{/each}}
             </tr>
           {{/each}}
           </tbody>
