--- a/client/stylesheets/12_index.less
+++ b/client/stylesheets/12_index.less
@@ -317,7 +317,7 @@ span {
     }
     .skin-setttings{
       .title {
-        i.fa{
+        i.fa-angle-right{
           &:before{
               content: "\f00d";
           }
