--- a/client/lib/components/general_flyout/view.html
+++ b/client/lib/components/general_flyout/view.html
@@ -7,7 +7,7 @@
             <a href="" class="theme-config-close-btn" data-id="{{state$component}}">
               <i class="fa fa-angle-right"></i>
             </a>
-            {{state$title}}
+            {{{state$title}}}
           </div>
           <div class="ibox float-e-margins" style="margin-bottom: 0;">
             <div class="ibox-content" style="padding-bottom: 10px;">
