--- a/client/lib/components/organizations/create_organization/view.html
+++ b/client/lib/components/organizations/create_organization/view.html
@@ -1,15 +1,15 @@
 <template name="createOrganizationPage">
   <form class="form-horizontal">
     <div class="form-group">
-      <label class="col-sm-2 control-label">Organization Name</label>
-      <div class="col-lg-4 col-md-6 col-sm-8">
+      <label class="col-sm-3 control-label">Organization Name</label>
+      <div class="col-sm-9">
         <input type="text" class="form-control" required="required" name="name">
       </div>
     </div>
     <div class="form-group">
-      <label class="col-sm-2 control-label">Billing Account</label>
-      <div class="col-sm-10">
-        <button class="btn btn-primary" type="button">
+      <label class="col-sm-3 control-label">Billing Account</label>
+      <div class="col-sm-9">
+        <button class="btn btn-warning col-sm-12" type="button">
           <i class="fa fa-credit-card"></i>
           Connect an account
         </button>
@@ -17,8 +17,8 @@
     </div>
     <div class="hr-line-dashed"></div>
     <div class="form-group">
-      <div class="col-sm-4 col-sm-offset-2">
-        <button class="btn btn-primary" type="submit">Create</button>
+      <div class="col-sm-9 col-sm-offset-3">
+        <button class="btn btn-primary col-sm-12" type="submit">Create</button>
       </div>
     </div>
   </form>
