fix stock and template item re-order bug

--- a/client/lib/components/stocktake/counting/list/view.html
+++ b/client/lib/components/stocktake/counting/list/view.html
@@ -29,7 +29,7 @@
             {{/each}}
           </ul>
         {{else}}
-          <ul class="list-group">
+          <ul class="list-group sortableStockItems">
             {{#each state$ingredientsList}}
               {{> render component="stockCountingListItem" id=this._id version=state$version garea=state$generalArea sarea=state$specialArea}}
             {{else}}
